# swagger_server/models/__init__.py
@@ -4,5 +4,6 @@
 from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.bollinger import Bollinger
+from swagger_server.models.candlestick import Candlestick
 from swagger_server.models.ema import Ema
 from swagger_server.models.sma import Sma
