# swagger_server/swagger/swagger.yaml
@@ -6,68 +6,121 @@ info:
     The API is to be consumed by the frontend team to display the charts required for the stock analysis and indicators
   version: 0.0.1
 servers:
-- url: http://3.84.200.180/
+  - url: http://3.84.200.180/
 security:
-- ApiKeyAuth: []
+  - ApiKeyAuth: []
 tags:
-- name: Overlays
-  description: Technical indicators that use the same scale as prices are plotted
-    over the top of the prices on a stock chart.
-- name: Oscillators
-  description: Technical indicators that oscillate between a local minimum and maximum
-    are plotted above or below a price chart.
+  - name: GeneralStockInfo
+    description: Provide Candle stick data and general stock information
+  - name: Overlays
+    description:
+      Technical indicators that use the same scale as prices are plotted
+      over the top of the prices on a stock chart.
+  - name: Oscillators
+    description:
+      Technical indicators that oscillate between a local minimum and maximum
+      are plotted above or below a price chart.
 paths:
-  /sma:
+  /candlestick:
     get:
       tags:
-      - Overlays
+        - GeneralStockInfo
       summary: The average price over the specified period
-      operationId: calculate_sma
+      operationId: calculate_candlestick
       parameters:
-      - name: symbol
-        in: query
-        description: Ticker Symbol Required
-        required: true
-        style: form
-        explode: true
-        schema:
-          type: string
-      - name: start_date
-        in: query
-        description: Start Date of Analysis in YYYY-MM-DD Format
-        required: true
-        style: form
-        explode: true
-        schema:
-          pattern: "^([0-9]{4})-(1[0-2]|0[1-9])-(3[01]|[12][0-9]|0[1-9])$"
-          type: string
-          format: Date
-          example: 2019-05-17
-      - name: period
-        in: query
-        description: The Analysis Period in Days from Start Date
-        required: true
-        style: form
-        explode: true
-        schema:
-          minimum: 1
-          type: integer
-      - name: length
-        in: query
-        description: The short period
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: integer
-          default: 5
+        - name: symbol
+          in: query
+          description: Ticker Symbol Required
+          required: true
+          style: form
+          explode: true
+          schema:
+            type: string
+        - name: start_date
+          in: query
+          description: Start Date of Analysis in YYYY-MM-DD Format
+          required: true
+          style: form
+          explode: true
+          schema:
+            pattern: "^([0-9]{4})-(1[0-2]|0[1-9])-(3[01]|[12][0-9]|0[1-9])$"
+            type: string
+            format: Date
+            example: 2019-05-17T00:00:00.000Z
+        - name: period
+          in: query
+          description: The Analysis Period in Days from Start Date
+          required: true
+          style: form
+          explode: true
+          schema:
+            minimum: 1
+            type: integer
       responses:
         "200":
           description: successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/sma'
+                $ref: "#/components/schemas/candlestick"
+        "401":
+          description: API key is missing or invalid
+        "404":
+          description: symbol not found
+        "405":
+          description: Validation exception
+      x-openapi-router-controller: swagger_server.controllers.general_stock_info_controller
+  /sma:
+    get:
+      tags:
+        - Overlays
+      summary: The average price over the specified period
+      operationId: calculate_sma
+      parameters:
+        - name: symbol
+          in: query
+          description: Ticker Symbol Required
+          required: true
+          style: form
+          explode: true
+          schema:
+            type: string
+        - name: start_date
+          in: query
+          description: Start Date of Analysis in YYYY-MM-DD Format
+          required: true
+          style: form
+          explode: true
+          schema:
+            pattern: "^([0-9]{4})-(1[0-2]|0[1-9])-(3[01]|[12][0-9]|0[1-9])$"
+            type: string
+            format: Date
+            example: 2019-05-17T00:00:00.000Z
+        - name: period
+          in: query
+          description: The Analysis Period in Days from Start Date
+          required: true
+          style: form
+          explode: true
+          schema:
+            minimum: 1
+            type: integer
+        - name: length
+          in: query
+          description: The short period
+          required: false
+          style: form
+          explode: true
+          schema:
+            type: integer
+            default: 5
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/sma"
         "401":
           description: API key is missing or invalid
         "404":
@@ -78,54 +131,54 @@ paths:
   /ema:
     get:
       tags:
-      - Overlays
+        - Overlays
       summary: The average price over the specified period
       operationId: calculate_ema
       parameters:
-      - name: symbol
-        in: query
-        description: Ticker Symbol Required
-        required: true
-        style: form
-        explode: true
-        schema:
-          type: string
-      - name: start_date
-        in: query
-        description: Start Date of Analysis in YYYY-MM-DD Format
-        required: true
-        style: form
-        explode: true
-        schema:
-          pattern: "^([0-9]{4})-(1[0-2]|0[1-9])-(3[01]|[12][0-9]|0[1-9])$"
-          type: string
-          format: Date
-          example: 2019-05-17
-      - name: period
-        in: query
-        description: The Analysis Period in Days from Start Date
-        required: true
-        style: form
-        explode: true
-        schema:
-          minimum: 1
-          type: integer
-      - name: length
-        in: query
-        description: The short period
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: integer
-          default: 5
+        - name: symbol
+          in: query
+          description: Ticker Symbol Required
+          required: true
+          style: form
+          explode: true
+          schema:
+            type: string
+        - name: start_date
+          in: query
+          description: Start Date of Analysis in YYYY-MM-DD Format
+          required: true
+          style: form
+          explode: true
+          schema:
+            pattern: "^([0-9]{4})-(1[0-2]|0[1-9])-(3[01]|[12][0-9]|0[1-9])$"
+            type: string
+            format: Date
+            example: 2019-05-17T00:00:00.000Z
+        - name: period
+          in: query
+          description: The Analysis Period in Days from Start Date
+          required: true
+          style: form
+          explode: true
+          schema:
+            minimum: 1
+            type: integer
+        - name: length
+          in: query
+          description: The short period
+          required: false
+          style: form
+          explode: true
+          schema:
+            type: integer
+            default: 5
       responses:
         "200":
           description: successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ema'
+                $ref: "#/components/schemas/ema"
         "401":
           description: API key is missing or invalid
         "404":
@@ -136,64 +189,65 @@ paths:
   /bollinger:
     get:
       tags:
-      - Overlays
-      summary: An oscillator meaning that it operates between or within a set range
+        - Overlays
+      summary:
+        An oscillator meaning that it operates between or within a set range
         of numbers or parameters..
       operationId: calculate_bollinger_bands
       parameters:
-      - name: symbol
-        in: query
-        description: Ticker Symbol Required
-        required: true
-        style: form
-        explode: true
-        schema:
-          type: string
-      - name: start_date
-        in: query
-        description: Start Date of Analysis in YYYY-MM-DD Format
-        required: true
-        style: form
-        explode: true
-        schema:
-          pattern: "^([0-9]{4})-(1[0-2]|0[1-9])-(3[01]|[12][0-9]|0[1-9])$"
-          type: string
-          format: Date
-          example: 2019-05-17
-      - name: period
-        in: query
-        description: The Analysis Period in Days from Start Date
-        required: true
-        style: form
-        explode: true
-        schema:
-          minimum: 1
-          type: integer
-      - name: length
-        in: query
-        description: The short period
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: integer
-          default: 5
-      - name: standard_deviation
-        in: query
-        description: The long period
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: integer
-          default: 2
+        - name: symbol
+          in: query
+          description: Ticker Symbol Required
+          required: true
+          style: form
+          explode: true
+          schema:
+            type: string
+        - name: start_date
+          in: query
+          description: Start Date of Analysis in YYYY-MM-DD Format
+          required: true
+          style: form
+          explode: true
+          schema:
+            pattern: "^([0-9]{4})-(1[0-2]|0[1-9])-(3[01]|[12][0-9]|0[1-9])$"
+            type: string
+            format: Date
+            example: 2019-05-17T00:00:00.000Z
+        - name: period
+          in: query
+          description: The Analysis Period in Days from Start Date
+          required: true
+          style: form
+          explode: true
+          schema:
+            minimum: 1
+            type: integer
+        - name: length
+          in: query
+          description: The short period
+          required: false
+          style: form
+          explode: true
+          schema:
+            type: integer
+            default: 5
+        - name: standard_deviation
+          in: query
+          description: The long period
+          required: false
+          style: form
+          explode: true
+          schema:
+            type: integer
+            default: 2
       responses:
         "200":
           description: successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/bollinger'
+                $ref: "#/components/schemas/bollinger"
         "401":
           description: API key is missing or invalid
         "404":
@@ -203,6 +257,62 @@ paths:
       x-openapi-router-controller: swagger_server.controllers.overlays_controller
 components:
   schemas:
+    candlestick:
+      type: object
+      properties:
+        Date:
+          type: array
+          items:
+            pattern: "^([0-9]{4})-(1[0-2]|0[1-9])-(3[01]|[12][0-9]|0[1-9])$"
+            type: string
+            format: Date
+            example: "2023-01-06, 2023-01-07"
+        Close:
+          type: array
+          items:
+            type: number
+        Open:
+          type: array
+          items:
+            type: number
+        High:
+          type: array
+          items:
+            type: number
+        Low:
+          type: array
+          items:
+            type: number
+        Volume:
+          type: array
+          items:
+            type: number
+        AdjClose:
+          type: array
+          items:
+            type: number
+      example:
+        Close:
+          - 0.8008281904610115
+          - 0.8008281904610115
+        Open:
+          - 0.8008281904610115
+          - 0.8008281904610115
+        High:
+          - 0.8008281904610115
+          - 0.8008281904610115
+        Low:
+          - 0.8008281904610115
+          - 0.8008281904610115
+        Volume:
+          - 0.8008281904610115
+          - 0.8008281904610115
+        AdjClose:
+          - 0.8008281904610115
+          - 0.8008281904610115
+        Date:
+          - "2023-01-06, 2023-01-07"
+          - "2023-01-06, 2023-01-07"
     sma:
       type: object
       properties:
@@ -223,14 +333,14 @@ components:
             type: number
       example:
         SMA:
-        - 6.02745618307040320615897144307382404804229736328125
-        - 6.02745618307040320615897144307382404804229736328125
+          - 6.027456183070403
+          - 6.027456183070403
         Close:
-        - 0.80082819046101150206595775671303272247314453125
-        - 0.80082819046101150206595775671303272247314453125
+          - 0.8008281904610115
+          - 0.8008281904610115
         Date:
-        - "2023-01-06, 2023-01-07"
-        - "2023-01-06, 2023-01-07"
+          - "2023-01-06, 2023-01-07"
+          - "2023-01-06, 2023-01-07"
     ema:
       type: object
       properties:
@@ -251,14 +361,14 @@ components:
             type: number
       example:
         EMA:
-        - 6.02745618307040320615897144307382404804229736328125
-        - 6.02745618307040320615897144307382404804229736328125
+          - 6.027456183070403
+          - 6.027456183070403
         Close:
-        - 0.80082819046101150206595775671303272247314453125
-        - 0.80082819046101150206595775671303272247314453125
+          - 0.8008281904610115
+          - 0.8008281904610115
         Date:
-        - "2023-01-06, 2023-01-07"
-        - "2023-01-06, 2023-01-07"
+          - "2023-01-06, 2023-01-07"
+          - "2023-01-06, 2023-01-07"
     bollinger:
       type: object
       properties:
@@ -287,20 +397,20 @@ components:
             type: number
       example:
         BBU:
-        - 1.46581298050294517310021547018550336360931396484375
-        - 1.46581298050294517310021547018550336360931396484375
+          - 1.4658129805029452
+          - 1.4658129805029452
         Close:
-        - 5.962133916683182377482808078639209270477294921875
-        - 5.962133916683182377482808078639209270477294921875
+          - 5.962133916683182
+          - 5.962133916683182
         BBM:
-        - 6.02745618307040320615897144307382404804229736328125
-        - 6.02745618307040320615897144307382404804229736328125
+          - 6.027456183070403
+          - 6.027456183070403
         BBL:
-        - 0.80082819046101150206595775671303272247314453125
-        - 0.80082819046101150206595775671303272247314453125
+          - 0.8008281904610115
+          - 0.8008281904610115
         Date:
-        - "2023-01-06, 2023-01-07"
-        - "2023-01-06, 2023-01-07"
+          - "2023-01-06, 2023-01-07"
+          - "2023-01-06, 2023-01-07"
   responses:
     UnauthorizedError:
       description: API key is missing or invalid
@@ -325,7 +435,7 @@ components:
         pattern: "^([0-9]{4})-(1[0-2]|0[1-9])-(3[01]|[12][0-9]|0[1-9])$"
         type: string
         format: Date
-        example: 2019-05-17
+        example: 2019-05-17T00:00:00.000Z
     end_date:
       name: end_date
       in: query
@@ -337,7 +447,7 @@ components:
         pattern: "^([0-9]{4})-(1[0-2]|0[1-9])-(3[01]|[12][0-9]|0[1-9])$"
         type: string
         format: Date
-        example: 2019-05-17
+        example: 2019-05-17T00:00:00.000Z
     period:
       name: period
       in: query
@@ -374,4 +484,3 @@ components:
       name: X-API-KEY
       in: header
       x-apikeyInfoFunc: swagger_server.controllers.authorization_controller.check_ApiKeyAuth
-
